<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Temporal Bot</string>
    <string name="loading">Loading…</string>
    <string name="rewind_time">Rewind Time</string>
    <string name="level_name">#Level Name#</string>
    <string name="button_resume">Resume</string>
    <string name="button_restart">Restart</string>
    <string name="button_back">Back</string>
    <string name="button_continue">Continue</string>
    <string name="start_level">Start</string>
    <string name="star_completion">Completion</string>
    <string name="star_time">Time</string>
    <string name="star_robots">Robots</string>
    <string name="text_completed">Completed</string>
    <string name="text_incomplete">Incomplete</string>
    <string name="text_divider">/</string>
    <string name="text_default_time">--:--.---</string>
    <string name="text_default_robots">--</string>
</resources>
